# hash_and_xattr

./: .gitignore  Cargo.toml  IMAopenssl-hash.sh  README.md  README.txt  bruteforce-hashcheck-sub.py  bruteforce-hashcheck.py  hash_and_xattr-0.3.5.ebuild  openssl-hash.sh  openssl-hash.sh.txt  testA.dgst  testA.hash  testA.signature.raw  test_decoded_cert.pem  test_private_key.pem  test_public_key.pem  xattr_test_file
script/: IMAopenssl-hash.sh  bruteforce-hashcheck-LF.py  bruteforce-hashcheck.py  create-1000-files.py  hash-sign-python.py  openssl-hash.sh  xxattr.sh
src/: IMAhashAlgorithm.rs  find_xattr.rs  format_hex.rs  hash_file.rs  ima-hashalgorithm.rs  keyid.rs  keyutils.rs  lib.rs  main.rs  old.now.rs  pathwalk.rs  rust-imautils-hash-ima.c.rs  rust-imautils-sign-ima.c.rs  rust-symbols-readelf-sWC-sorted.txt  rust-symbols-readelf-sWC.txt  set_ima_xattr.rs  tests-verify-sig-hash-pub.rs  unusedkeyf.rs  v2.rs
tests/: check_xattr_privileges.rs  generate_rsa_keypair.rs  keyid-simple.rs  keyid-skip24header.rs  keyid.rs  verify_sig_hash_pub.rs
txtdoc/: cargo-tree-dependencies.txt  hash-sign-python-output-1.txt  hash-sign-python-output-2.txt  hash-sign-python-output-3.txt  keyid-diff-between.patch  main-output-1.txt  openssl-hash-v2.txt  openssl-hash-v3.txt  pathwalk.txt  pycargo-ebuild.output.txt  skip-output-1.txt  skip-output-2.txt  tests-check_xattr_privileges-OUTPUT-1.txt  tests-generate_rsa_keypair-OUTPUT-1.txt  tests-keyid-OUTPUT-1.txt  tests-verify_sig_hash_pub-OUTPUT-1.txt  user-ima.txt
