[package]
name = "hash_and_xattr"
version = "0.3.2"
edition = "2021"
default-run = "hash_and_xattr"  #if many --bin subtargets, run (main.rs)

[dependencies]
xattr = "*"      # interacting with extended attributes
openssl = "*"    # private/public crypto key signing
hex = "*"        # for hex decode/encode
atty = "*"       # Add atty to check if stdin is connected (pathwalk)
rayon = "*"      # parallel processing
walkdir = "*"    # Directory traversal
yasna = "0.5"    # for ASN.1 Encoding

#Available Test Targets
#    check_xattr_privileges
#    generate_rsa_keypair
#    keyid
#    keyid-simple
#    keyid-skip24header
#    verify_sig_hash_pub
